k8/visbert-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: visbert
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: visbert
    spec:
      containers:
        - name: visbert
          image: registry.datexis.com/bvanaken/visbert:v1.1
          command:
            - /bin/sh
            - "-c"
            - "./start/container_start.sh"
          imagePullPolicy: Always
          ports:
            - name: client-port
              containerPort: 1337
          resources:
            limits:
              memory: 8Gi
              nvidia.com/gpu: 1
          volumeMounts:
            - name: visbert-models-pvc
              mountPath: /models_dir
      nodeSelector:
        gpu: k80
      imagePullSecrets:
        - name: private-registry-auth
      volumes:
        - name: visbert-models-pvc
          persistentVolumeClaim:
            claimName: visbert-models-pvc
