k8/visbert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visbert
spec:
  type: NodePort
  ports:
    - port: 1337
      name: client-port
      targetPort: 1337
  selector:
    app: visbert
