k8/visbert-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: visbert-demo
 annotations:
   cert-manager.io/cluster-issuer: letsencrypt
   kubernetes.io/ingress.class: nginx
spec:
 tls:
 - secretName: "visbert-demo-subdomain-tls"
   hosts:
   - "visbert.demo.datexis.com"
 rules:
 - host: "visbert.demo.datexis.com"
   http:
     paths:
     - path:
       backend:
         serviceName: visbert
         servicePort: 1337
